<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@string/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portrait"
    tools:context="com.example.tianxingwang.homework2.Pokedex"
    android:orientation="vertical">


    <Button
        android:id="@+id/next"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:shadowColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/previous"
        android:layout_width="46dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:shadowColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="111dp"
        android:layout_height="130dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/picture_pokemon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        app:srcCompat="@drawable/pikachu" />

    <LinearLayout

        android:id="@+id/pokemonDetail"
        android:layout_width="171dp"
        android:layout_height="135dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/namePikachu"
            android:textColor="@color/ic_launcher_background"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/categoryMouse"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/yellow"
            android:text="@string/typeElectric"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collect"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="117dp"
        android:layout_height="81dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/customName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName|textMultiLine"
            android:scrollHorizontally="false"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/setting"
        android:layout_width="61dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873"
        app:srcCompat="@drawable/setting" />


</android.support.constraint.ConstraintLayout>

